- Added the date_parse() function that returns a parsed date/time string   including warnings and errors. - Added the timezone_name_from_abbr() function that exposes the guessing   mechanism that tries to find a timezone identifier from a timezone   abbreviation and GMT offset. - Fixed a bug where combined date formats 'c' and 'r' were cut off due to   insufficient space in the buffer. - Implemented better error and warning handling that is also used for the   date_parse() function. - Fixed the date::RFC3339 class constant. - Fixed bug #37017 (strtotime fails before 13:00:00 with some time zones   identifiers) - Fixed problems with "T" in front of a time string was seen as a time zone   string. - Fixed a problem were 5 and 6 character timezone abbreviations where not   correctly parsed.